--- a/src/templates/login_view.html
+++ b/src/templates/login_view.html
@@ -4,23 +4,38 @@
 
 <section id="login-panel" class="input-panel">
     <h2>LOGIN</h2>
-    <form>
+    <form method="POST" action="/login">
 
         <div class="image-embedded-input-wrapper">
             <img class="left-side-image" src="{{ url_for('static', filename='icons/username_icon.png') }}" width="30px">
-            <input class="image-embedded-input" placeholder="Username"><br>
+            <input class="image-embedded-input" name="login-panel-username" placeholder="Username" required pattern="{{username_pattern}}"><br>
         </div>
 
         <div class="image-embedded-input-wrapper">
             <img class="left-side-image" id="password-input-icon" src="{{ url_for('static', filename='icons/password_icon.png') }}" width="25px">
-            <input id="password-input" class="image-embedded-input" placeholder="Password" type="password">
+            <input id="password-input" class="image-embedded-input" name="login-panel-password" placeholder="Password" type="password" required pattern="{{password_pattern}}">
             <img class="right-side-image" src="{{ url_for('static', filename='icons/show_password_icon.png') }}" width="25px">     
         </div>
 
-        
+        <div class="flashed-messages">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+               
+                    {% for message in messages %}
+                    <div>
+                        <span style="margin-right: 5px;">&bull;</span> {{ message }}
+                    </div>
+    
+                    {% endfor %}
+              
+                {% endif %}
+            {% endwith %}
+        </div>
+
+        <button class="submit-button"> Log in </button>    
     </form>
 
-    <button class="submit-button"> Log in </button>
+    
     <label id="login-panel-to-prev-section-label" class="to-prev-section-label">register</label>
 </section>
 
