--- a/qutehub/public/css/header.css
+++ b/qutehub/public/css/header.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: left;
-    background: linear-gradient(rgb(0, 255, 0), rgb(4, 181, 4));
+    background: linear-gradient(rgb(159, 240, 159), rgb(4, 181, 4));
     color: white;
     padding: 0px 19px;
     gap: 10%;
@@ -32,6 +32,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    
 }
 
 .header-menu{
@@ -40,7 +41,7 @@
     justify-content: space-between;
     padding: 5px;
     align-items: center;
-    width: 400px;
+    width: 520px;
     gap: 5px;
     height: 40%;
 }
@@ -50,7 +51,7 @@
 .dropdown-menu-displayed a{
     background: rgb(2, 167, 2);
     padding: 4px 0px 4px 6px;
-    font-size: 15px;
+    font-size: 18px;
     text-align: left;
     color: inherit;
     opacity: 1;
@@ -87,13 +88,21 @@
     width: 33%;
     height: 35px;
     text-align: center;
-    padding: 0px 0px 0px 5px;
+    font-size: 20px;
+    padding: 8px 0px 8px 5px;
     position: relative; /* Add this line */
     cursor: pointer;
 }
 
+.header-menu-option:hover{
+    background-color: green;
+
+}
+
 .header-menu-option label{
     cursor: pointer;
+    /* padding: 4px 0; */
+    /* background-color: green; */
 }
 
 .dropdown-menu-options {
@@ -102,6 +111,11 @@
     margin-top: 3px;
     padding-top: 4px;
     width: 125px;
+}
+
+.dropdown-menu-options a {
+    padding: 10px 0;
+    padding-left: 5px;
 }
 
 .dropdown-menu-displayed{
@@ -123,6 +137,11 @@
     border-radius: 0px 0px 5px 5px;
 }
 
+.dropdown-menu-options a {
+    font-weight: bold;
+
+}
+
 .header-menu .vr {
     border: 1px solid;
     background-color: inherit;
@@ -132,18 +151,19 @@
 .dropdown-arrow-icon-container{
     text-align: center;
     background-color: rgb(0, 137, 0);
-    padding: 5px;
+    /* padding: 15px; */
+    
     align-content: center;
     height: 100%;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    padding: 8px;
 }
-
 
 
 
 .search-bar-account-icon-section{
     display: inline-flex;
-    gap: 15px;
+    gap: 45px;
 }
 
 .search-bar{
@@ -155,15 +175,21 @@
 
 .search-bar img {
     position: relative;
-    left: 27px;
+    left: 30px;
+    opacity: 0.5;
 }
 
 .search-bar input{
-    font-size: 16px;
+    font-size: 20px;
     border-radius: 20px;
-    padding: 10px 13px 10px 33px;
+    padding: 10px 13px 10px 40px;
 }
 
+.search-bar input:active{
+    /* background-color: red; */
+
+
+}
 
 
 .account-panel-icon{
@@ -184,7 +210,7 @@
 
 
 
-@media screen and (max-width: 1040px){
+@media screen and (max-width: 1300px){
 
     .website-header{
         gap: 0;
@@ -203,7 +229,7 @@
     }
 
     .header-menu{
-        width: 400px;
+        /* width: 420px; */
         height: fit-content;
         /* background-color: red; */
         position: absolute;
