--- a/qutehub/public/css/main.css
+++ b/qutehub/public/css/main.css
@@ -1,6 +1,7 @@
 
 body{
     margin: 0;
+    /* width: 100vw; */
     /* background-color: green; */
 }
 
@@ -8,7 +9,7 @@ main {
     margin: auto;
     /* background-color: rgb(112, 116, 112); */
     width: 100%;
-
+    
 }
 
 
