--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -8,7 +8,8 @@
     gap: 100px;
     padding-bottom: 20px;
     border-top: 1px solid #444444;
-
+    /* height: 50px; */
+    /* background-color: red; */
 }
 
 .contact-section{
