--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -3,13 +3,28 @@
 body{
     background-color:rgb(42, 42, 42);
     color:rgb(255, 255, 255);
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-family: 'Poppins', sans-serif;
     margin: 0;
     width: 100vw;
     height: 100vh;
     overflow-y: hidden;
     font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-wrapper {
+    /* max-height: 100vh;        Maximum height of 70% of viewport height */
+    width: 100%;
+    padding: 10px 0;
+    box-sizing: border-box;  /* Include padding in height calculation */
+    overflow-y: auto;        /* Scroll if content overflows */
+    flex: 1;
+    /* overflow: visible; */
+    /* background-color: green; */
+    align-content: center;
+    font-size: inherit;
+    background-color: inherit;
 }
 
 @media only screen and (max-width: 700px){
