--- a/src/public/css/quiz_specification_panel.css
+++ b/src/public/css/quiz_specification_panel.css
@@ -3,11 +3,13 @@
 
 /* - */
 .quiz-specification-panel{
-    padding: 20px;
+    /* padding: 20px; */
     box-sizing: border-box;
-    background-color: #333333;
-    overflow-y: scroll;
-    height: 77vh;
+    background-color: hsl(0, 0%, 20%);
+    /* overflow-y: hidden; */
+    /* background-color: red; */
+    height: fit-content;
+    padding: 0px 10px;
     font-size: 1.5em;
     /* background-color: red; */
 }
@@ -57,6 +59,7 @@
     font-size: inherit;
     /* background-color: green; */
     height: 450px;
+    /* flex: 1; */
     /* background-color: red; */
 }
 
@@ -366,6 +369,9 @@
     border-radius: 10px;
     font-size: 1.5em;
     font-family: inherit;
+    max-width: fit-content;
+    text-align: center;
+    box-sizing: border-box;
     /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     display: block;
 }
@@ -409,7 +415,7 @@
 
     .header-submit-button-wrapper .submit-button{
         /* padding: 20px 15px; */
-        padding: 5px 5px;
+        padding: 10px 75px;
         margin: 0;
     }
     
