--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -5,15 +5,27 @@
     border-top: 2px solid;
     justify-content: center;
     align-items: center;
-    gap: 100px;
-    padding-bottom: 20px;
+    gap: 20%;
+    box-sizing: border-box;
+    text-align: center;
     border-top: 1px solid #444444;
+    font-weight: inherit;
     /* height: 50px; */
     /* background-color: red; */
 }
 
 .contact-section{
     margin-left: 15px;
+    font-weight: inherit;
+}
+
+
+.contact-section h2 {
+    font-size: 1.1em;
+}
+
+footer p{
+    font-size: 0.7em;
 }
 
 .contact-sites {
@@ -21,4 +33,8 @@
     display: flex;
     flex-direction: row;
     gap: 45px;
+}
+
+.contact-sites img{
+    margin-bottom: 10px;
 }
