--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -25,6 +25,10 @@ body{
     align-content: center;
     font-size: inherit;
     background-color: inherit;
+    padding-left: 15px;
+
+    padding-right: 10px;
+    background-color: hsl(0, 0%, 20%);
 }
 
 @media only screen and (max-width: 700px){
