--- a/src/public/css/quiz_specification_panel.css
+++ b/src/public/css/quiz_specification_panel.css
@@ -5,11 +5,11 @@
 .quiz-specification-panel{
     /* padding: 20px; */
     box-sizing: border-box;
-    background-color: hsl(0, 0%, 20%);
+    /* background-color: hsl(0, 0%, 20%); */
     /* overflow-y: hidden; */
     /* background-color: red; */
     height: fit-content;
-    padding: 0px 10px;
+    /* padding: 0px 10px; */
     font-size: inherit;
     margin: 0;
     /* background-color: red; */
@@ -20,7 +20,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 1390px;
+    align-items: center;
+    width: 100%;
+    /* background-color: red; */
+    /* max-width: 1390px; */
     /* background-color: red; */
 }
 
@@ -53,6 +56,7 @@
 /* --- */
 .general-info-section hr, .question-list-section hr {
     border-color: #444444;
+    margin-bottom: 15px;
 }
 
 /* -- */
@@ -71,6 +75,15 @@
     font-size: 0.95em;
 }
 
+/* ####         Moving elements from top so that they are the same vertical level            ####
+   ####         This is necessary because fieldset legend additional space from top.         ####*/
+
+.name-difficulty-time-panel .general-info-form-input:first-child, .subject-tag-list{
+    position: relative;
+    top: -0.64em;
+}
+
+
 /* --- */
 .general-info-form{
     display: flex;
@@ -78,8 +91,8 @@
     /* align-items: stre; */
     align-items: flex-start;
     /* background-color: red; */
-    gap: 30px;
-    margin: 30px 0px;
+    gap: 15px;
+    /* margin: 30px 0px; */
     height: clamp(60%, 280px, 65%);
     /* background-color: red; */
     /* background-color: red; */
@@ -163,7 +176,7 @@
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     padding: 15px;
-    gap: 15px;
+    gap: 5px 1.0em;
     height: 100%;
     /* width: clamp(200px, 75vw, 400px); */
     box-sizing: border-box;
@@ -222,8 +235,8 @@
 
 .question-list-section .question-list-panel{
     width: 100%;
-    padding: 20px 20px;
-    margin-top: 44px;
+    padding: 1em;
+    /* margin-top: 44px; */
     background-color: #444444;
     /* display: flex; */
     /* flex-direction: column; */
@@ -370,9 +383,11 @@
 
 .header-submit-button-wrapper .submit-button{
     /* margin: 10px auto; */
-    padding: 30px 100px;
+    /* padding: 30px 100px; */
+    padding: 10px 75px;
     border-radius: 10px;
-    font-size: 1.5em;
+    font-weight: bold;
+    font-size: 1.2em;
     font-family: inherit;
     max-width: fit-content;
     text-align: center;
@@ -389,21 +404,19 @@
     }
 }
 
-@media only screen and (max-width: 900px){
-    .general-info-section {
-        height: fit-content;
-    }
-    
+@media only screen and (max-width: 420px){
+
+
     .general-info-form {
-        /* flex-direction: column; */
         height: fit-content;
-        display: flex;
+        flex-direction: row;
+        height: clamp(150px, 50vh, 150px);
     }
     
     .subject-tag-list, .name-difficulty-time-panel {
-        
-        height: 50%;
-
+        height: 100%;
+        /* height: 50%; */
+        flex: 1;
     }
 
  
@@ -416,13 +429,6 @@
 @media only screen and (max-width: 700px){
     .quiz-specification-panel .header-submit-button-wrapper{
         flex-direction: column;
-        
+        align-items: flex-start;       
     }
-
-    .header-submit-button-wrapper .submit-button{
-        /* padding: 20px 15px; */
-        padding: 10px 75px;
-        margin: 0;
-    }
-    
 }
