--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -11,43 +11,62 @@ header {
     box-sizing: border-box;
     justify-content: space-between;
     padding-left: 30px;
-    padding-right: 10px;
+    padding-right: 60px;
 
     font-family: inherit;
     font-size: inherit;
     height: 80px;
+    margin: 0;
 }
 
 header h1 {
     font-size: 1.7em;
+    cursor: pointer;
 }
 
 .account-icon-options-wrapper {
     position: relative;
-    width: fit-content;
+    top: 1px;
+    width: 9vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100%;
+    justify-content: flex-start;
+    /* padding-bottom: 30px; */
+    margin-top: auto;
+    border-radius: 10px 10px 0 0 !important;
+    height: 60%;
     padding: 0 15px;
+    padding-bottom: 3px;
     cursor: pointer;
-    /* background-color: red; */
+    background-color: #444444fe !important;
+    transition: background-color 0.3s ease;
+    border: 0;
+}
 
-    /* background-color: red; */
+.account-icon-options-wrapper-clicked{
+    top: 3%;
+    background-color: #272727fe !important;
 }
 
 .account-icon-options-wrapper:hover{
-    background-color: rgb(31, 31, 31);
+    background-color: #272727fe !important;
 }
+
+
 
 .account-icon {
     cursor: pointer;
     /* background-color: #d8d8d8; */
-    border-radius: 10px;
+    /* border-radius: 100px; */
     padding: 10px;
     border: 0;
     outline: 0;
+    width: clamp(1px, calc(1em + 3vw), 35px) !important;
+    /* height: 4vh !important; */
+
+
+    /* background-color: red; */
     /* box-shadow: inset 0 1px 2px rgba(110, 74, 74, 0.1); */
 
 
@@ -63,34 +82,43 @@ header h1 {
 .account-option-list {
     /* opacity: 0.7; */
     position: absolute;
-    width: clamp(100px, 250%, 450px);
-    font-size: inherit;
+
+    width: clamp(100px, 150%, 450px);
+    font-size: 0.7em;
     display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     /* top: 100%; Position it below the icon */
-    right: -1%;
-    top: 100%;
+    /* right: -7%; */
+    top: 99%;
     /* top: 12.8%; */
     /* top: 125px; */
     /* padding-top: 300px; */
     /* right: -50%; */
     /* margin-top: 30px; Add a slight gap */
+    box-shadow: inset 1px -1px rgba(127, 115, 115, 0.084);
     border: 1px solid #444444; /* Darker border */
     border-radius: 0px 0px 10px 10px;
-    background-color: #333333fe;
+    background-color: #272727fe;
     color: #ffffff; /* White text color */
-    box-shadow: inset 2px -2px 5px rgb(111, 108, 108);
-    padding: 25px 10px;
+    /* box-shadow: inset 2px -4px 5px rgb(111, 108, 108); */
+    padding: 25px 2px;
     /* padding-top: 50px; */
     /* margin-right: 30px; */
 
     height: fit-content;
+    z-index: 1000;
+    border-top: 0;
+}
+
+
+.account-option-list > label:first-child{
+    font-size: 1.1em;
 }
 
 .account-option-list .username{
-    font-size: 1.3em;
+    font-size: 1.4em;
     color: rgb(229, 255, 0);
 }
 
@@ -106,11 +134,11 @@ header h1 {
 
 .account-option-list button {
     /* width: 100%; */
-    width: 90%;
-    padding: 13px 20px;
+    width: 85%;
+    height: clamp(30px, 10.5vh, 40px);
     font-weight: bold;
 
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 
 
