--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -25,7 +25,11 @@ body{
     padding-left: 1em;
     padding-right: 1em;
     /* padding-bottom: 20em; */
-    background-color: hsl(0, 0%, 20%);
+    background: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (max-width: 600px){
