--- a/src/public/css/inputs.css
+++ b/src/public/css/inputs.css
@@ -8,20 +8,42 @@
     box-shadow: inset 0 1px 2px rgba(110, 74, 74, 0.1);
 }
 
-.arrow-left, .arrow-right{
+.arrow-left, .arrow-right {
     display: inline-block;
     background-color: inherit;
-    /* min-height: 10px;
-    min-width: 10px; */
     border-left: 2px solid;
     border-top: 2px solid;
-    
+    transform-origin: center; /* Ensure scaling is centered */
+    transition: transform 0.2s; /* Optional: smooth scaling transition */
+    cursor: default !important;
+    opacity: 0.2;
 }
 
-.arrow-left{
-    transform: rotate(-45deg);
+.arrow-left {
+    transform: rotate(-45deg) scale(1); /* Initial scale of 1 */
 }
 
-.arrow-right{
-    transform: rotate(135deg);
+.arrow-right {
+    transform: rotate(135deg) scale(1); /* Initial scale of 1 */
 }
+
+.arrow-left-enabled, .arrow-right-enabled {
+    cursor: pointer !important;
+    opacity: 1;
+}
+
+.arrow-left-enabled:hover {
+    transform: rotate(-45deg) scale(1.3); /* Only scale without affecting rotation */
+}
+
+.arrow-right-enabled:hover{
+    transform: rotate(135deg) scale(1.3);
+}
+
+
+/* .arrow-left:hover{
+    transform: rotate(-45deg) scale(1.3);
+}
+
+.scale-large .arrow-left, .scale-large .arrow-right {
+    transform: rotate(-45deg) scale(1.5); /* Scale up to 150% */
